--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Shared/_Layout.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Shared/_Layout.cshtml
@@ -16,6 +16,7 @@
         <div class="menu_head"></div>
         <ul class="layout_menu">
             <li>@Html.ActionLink("资源分类管理", "ResourceType", new { controller = "ReceptionManager" }, new { @menuKey = "ResourceType" })</li>
+            <li>@Html.ActionLink("资源管理", "Resource", new { controller = "ReceptionManager" }, new { @menuKey = "Resource" })</li>
         </ul>
     </div>
     <div class="layout_right">
