--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/Resource.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/Resource.cshtml
@@ -6,6 +6,23 @@
 <div class="layout-content-head">
     <h2>资源管理 -> 列表</h2>
 </div>
+<div class="layout-content-condition">
+    资源名称：
+    <input id="Name" name="Name" style="width: 160px; height: 30px;" />
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    所属街道：
+    <input id="SSJD" name="SSJD" style="width: 160px; height: 30px;" />
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    项目状态：
+    <select id="RStatus" name="RStatus" style="width: 120px;">
+        <option value="0" selected="selected">--请选择--</option>
+        <option value="1">未开工</option>
+        <option value="2">已开工</option>
+        <option value="3">已投产</option>
+    </select>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="button" value="搜索" style="width: 100px; height: 30px; font-family: 微软雅黑" onclick="Search()" />
+</div>
 <div class="layout-content-main">
     <table class="l-table" style="min-width: 900px;">
         <thead>
@@ -30,7 +47,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td id="page_Resource" colspan="2"></td>
+                <td id="page_Resource" colspan="6"></td>
             </tr>
         </tfoot>
     </table>
@@ -46,7 +63,10 @@
             cache: "false",
             url: ACTION_URL("GetResourcePageList", "ReceptionManager"),
             data: {
-                pageIndex: pageIndex
+                pageIndex: pageIndex,
+                Name: entity.Name,
+                SSJD: entity.SSJD,
+                RStatus: entity.RStatus
             },
             success: function (response) {
                 $("#tbody_ResourceList").L_bindingDataList(response);
@@ -75,6 +95,21 @@
                 }
             });
         })
+    }
+
+    var entity = {
+        Name: "",
+        SSJD: "",
+        RStatus: "0"
+    };
+
+    function Search()
+    {
+        entity.Name = $.trim($("#Name").val());
+        entity.SSJD = $.trim($("#SSJD").val());
+        entity.RStatus = $("#RStatus").val();
+
+        GetResourceList();
     }
 </script>
 
