--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Shared/_Layout.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Shared/_Layout.cshtml
@@ -17,6 +17,8 @@
         <ul class="layout_menu">
             <li>@Html.ActionLink("资源分类管理", "ResourceType", new { controller = "ReceptionManager" }, new { @menuKey = "ResourceType" })</li>
             <li>@Html.ActionLink("资源管理", "Resource", new { controller = "ReceptionManager" }, new { @menuKey = "Resource" })</li>
+            <li>@Html.ActionLink("大事件管理", "ResourceEvent", new { controller = "ReceptionManager" }, new { @menuKey = "ResourceEvent" })</li>
+            <li>@Html.ActionLink("导航管理", "Navigation", new { controller = "ReceptionManager" }, new { @menuKey = "Navigation" })</li>
         </ul>
     </div>
     <div class="layout_right">
