完成导航管理分页列表和查询

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/ResourceEvent.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/ResourceEvent.cshtml
@@ -26,7 +26,7 @@
                 <th style="width:80px;">@Html.ActionLink(" ", "ResourceEventModify", new { controller = "ReceptionManager" }, new { @class = "create" })</th>
             </tr>
         </thead>
-        <tbody id="tbody_ResourceEventList" binding="{'pageId':'page_ResourceEvent','pageCallback':'GetResourceList'}">
+        <tbody id="tbody_ResourceEventList" binding="{'pageId':'page_ResourceEvent','pageCallback':'GetResourceEventList'}">
             <tr>
                 <td binding="{'html':'Name'}"></td>
                 <td binding="{'html':'R_ID'}"></td>
