--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/Navigation.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/Navigation.cshtml
@@ -1,7 +1,97 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Navigation";
+    ViewBag.MenuKey = "Navigation";
 }
+<div class="layout-content-head">
+    <h2>导航管理 -> 列表</h2>
+</div>
+<div class="layout-content-condition">
+    导航名称：
+    <input id="Name" name="Name" style="width: 160px; height: 30px;" />
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <input type="button" value="搜索" style="width: 100px; height: 30px; font-family: 微软雅黑" onclick="Search()" />
+</div>
+<div class="layout-content-main">
+    <table class="l-table" style="min-width: 900px;">
+        <thead>
+            <tr>
+                <th>导航名称</th>
+                <th>添加时间</th>
+                <th style="width:80px;">@Html.ActionLink(" ", "ResourceEventModify", new { controller = "ReceptionManager" }, new { @class = "create" })</th>
+            </tr>
+        </thead>
+        <tbody id="tbody_NavigationList" binding="{'pageId':'page_Navigation','pageCallback':'GetNavigationList'}">
+            <tr>
+                <td binding="{'html':'Name'}"></td>
+                <td binding="{'html':'AddTime','htmlHandle':'datetime'}"></td>
+                <td><a class="edit" binding="{'onclick':'N_ID','onclickFormat':'Edit(\'{0}\')'}"></a><a class="delete" onclick="Delete(this)" binding="{'id':'N_ID'}"></a></td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td id="page_Navigation" colspan="4"></td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
+<script type="text/javascript">
+    var list;
 
-<h2>Navigation</h2>
+    $(function () {
+        GetNavigationList();
+    });
+
+    function GetNavigationList(pageIndex) {
+        $.L.ajaxHandle({
+            type: "get",
+            cache: "false",
+            url: ACTION_URL("GetNavigationPageList", "ReceptionManager"),
+            data: {
+                pageIndex: pageIndex,
+                Name: entity.Name
+            },
+            success: function (response) {
+                $("#tbody_NavigationList").L_bindingDataList(response);
+            }
+        })
+    }
+
+    function Edit(id) {
+
+        window.location.href = '@Url.Action("NavigationModify", "ReceptionManager")' + '?id=' + id;
+    }
+
+    function Delete(id) {
+        var id_string = $(id).attr("id");
+        $.L.messageConfirmT("确定删除该信息？", function () {
+            $.L.ajaxHandle({
+                cache: "false",
+                data: { id: id_string },
+                url: ACTION_URL("NavigationDelete", "ReceptionManager"),
+                error: function () {
+                    alert("error");
+                },
+                success: function (response) {
+
+                    window.location.href = '@Url.Action("Navigation", "ReceptionManager")';
+                }
+            });
+        })
+    }
+
+    var entity = {
+        Name: ""
+    };
+
+    function Search()
+    {
+        entity.Name = $.trim($("#Name").val());
+
+        GetNavigationList();
+    }
+</script>
+
+
+
+
 
