--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/ResourceTypeModify.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/ResourceTypeModify.cshtml
@@ -22,7 +22,7 @@
         <div class="edit-area">
             <div class="edit-lable"></div>
             <div class="edit-content">
-                <input style="margin-left: 80px; width: 70px;height: 30px;" type="submit" value="保存" />
+                <input style="margin-left: 80px; width: 70px;height: 30px;" type="submit" value="保存" onclick="return save();" />
                 <input type="button" value="返回" style="width: 70px;height: 30px;" onclick="BackTo()" />
             </div>
         </div>
@@ -34,6 +34,19 @@
 
     function BackTo() {
         window.location.href = '@Url.Action("ResourceType", "ReceptionManager")';
+    }
+
+    function save()
+    {
+        //验证
+        var name = $.trim($("#Name").val());
+        if (name.length == 0)
+        {
+            $.L.messageWarningT('资源名称不能为空');
+            return false;
+        }
+
+        return true;
     }
 </script>
 
