--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/layout_m.css
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/layout_m.css
@@ -30,6 +30,8 @@
     background-color:rgba(91,206,239,.5);
     box-shadow:0px 0px 8px rgba(0,0,0,.8);
     z-index:9;
+    overflow-y:auto;
+    overflow-x:hidden;
 }
 
 .layout_right{
@@ -38,7 +40,7 @@
     top:85px;
     background-color:#fff;
     z-index:8;
-    overflow-y:scroll;
+    overflow-y:auto;
     overflow-x:hidden;
 }
 
