完成导航管理全部内容

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/JTMap.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/ReceptionManager/JTMap.cshtml
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=10" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>南京交通视频监控平台驾驶舱</title>
+    <title>选择坐标点</title>
     @Content.Common(Url, false)
     @Content.tmap(Url)
 </head>
