--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Shared/_Layout.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=10" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>南京交通视频监控平台驾驶舱</title>
+    <title>大联勤综合信息服务平台后台</title>
     @Content.Common(Url,true)
     @Content.zTree(Url)
 </head>
