--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/App_Code/Content.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/App_Code/Content.cshtml
@@ -38,6 +38,7 @@
     <script src="@Url.Content("~/Scripts/jquery.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.tuhui.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery-ui.js")"></script>
+    <script src="@Url.Content("~/Scripts/json2.js")"></script>
     <script src="@Url.Content("~/Scripts/My97DatePicker/WdatePicker.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/ckeditor/ckeditor.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/uploadify/jquery.uploadify.js")"></script>
