修改导入图标

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/common.css
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/Content/common.css
@@ -250,6 +250,17 @@ a.create {
     font-size: 14px;
 }
 
+a.importexcel {
+    color: #646464;
+    padding-left: 30px;
+    background-image: url(images/common/importexcel.png);
+    background-repeat: no-repeat;
+    background-position: 5px center;
+    font-size: 14px;
+    width:20px;
+    height:20px;
+}
+
 a.search {
     color: #646464;
     padding-left: 30px;
