--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/App_Code/Content.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/App_Code/Content.cshtml
@@ -90,10 +90,9 @@
     <link rel="stylesheet" type="text/css" href="@Url.Content("~/Scripts/zTree/zTreeStyle.css")" />
     <script src="@Url.Content("~/Scripts/zTree/jquery.ztree.core-3.5.min.js")" type="text/javascript"></script>
           
-           }}
-
-@helper reception(UrlHelper Url)
+}
+@helper bootstrap(UrlHelper Url)
 {
-    <link href="@Url.Content("~/Content/reception.css")" rel="stylesheet" />
-    <script src="@Url.Content("~/Scripts/reception.js")"></script>
+    <link href="@Url.Content("~/bootstrap-3.3.5-dist/css/bootstrap.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/bootstrap-3.3.5-dist/js/bootstrap.js")"></script>
     }
