完成视频显示

--- a/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/App_Code/Content.cshtml
+++ b/Reception/Presentation/WebUI/Tuhui.Reception.WebUI/App_Code/Content.cshtml
@@ -96,3 +96,9 @@
     <link href="@Url.Content("~/bootstrap-3.3.5-dist/css/bootstrap.css")" rel="stylesheet" />
     <script src="@Url.Content("~/bootstrap-3.3.5-dist/js/bootstrap.js")"></script>
     }
+
+@helper layer(UrlHelper Url)
+{
+    <link href="@Url.Content("~/layer/skin/layer.css")" rel="stylesheet" />
+    <script src="@Url.Content("~/layer/layer.js")"></script>
+    }
